--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -1,5 +1,5 @@
 .header {
-    background: #fff;
+    background: transparent;
     position: fixed;
     left: 0;
     right: 0;
@@ -134,6 +134,10 @@
     top: 50%;
   }
   
+  .isHidden {
+    display: none;
+  }
+
   @media screen and (max-width: 768px) {
     .header {
       height: 60px;
